# rules_py

examples/pytest/: BUILD.bazel
py/: defs.bzl
pytest/: defs.bzl  pytest_shim.py
