load("@aspect_rules_py//pytest:defs.bzl", "pytest_test")

pytest_test(
    name = "pytest_test",
    srcs = [
        "foo_test.py",
    ],
    imports = ["../.."],
    package_collisions = "warning",
    pip_repo = "pypi",
    deps = [
        "@pypi_ftfy//:pkg",
        "@pypi_neptune//:pkg",
    ],
)
